--- a/e-commerce-api/package.json
+++ b/e-commerce-api/package.json
@@ -11,12 +11,14 @@
   "author": "mokhtar",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cloudinary": "^1.35.0",
     "connect-mongodb-session": "^3.1.1",
     "cookie-session": "^2.0.0",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "express-validator": "^6.15.0",
