--- a/e-commerce-api/package.json
+++ b/e-commerce-api/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "bwip-js": "^3.4.0",
     "cloudinary": "^1.35.0",
     "connect-mongodb-session": "^3.1.1",
     "cookie-session": "^2.0.0",
